Show hazardous or safe image in details fragment

--- a/app/src/main/res/layout/fragment_asteroid_detail.xml
+++ b/app/src/main/res/layout/fragment_asteroid_detail.xml
@@ -22,6 +22,7 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/asteroid_hazard_image"
             app:asteroidStatusImage="@{asteroid.potentiallyHazardous}"
+            app:imageResource="@{asteroid.hazardousImage}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
